[tool.poetry]
name = "things-cloud"
version = "0.1.0"
description = "Client for Things Cloud API"
authors = ["disrupted <hi@salomonpopp.me>"]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.9.10"
shortuuid = "^1.0.11"
httpx = "^0.23.3"
structlog = "^24.1.0"
attrs = "^22.2.0"
cattrs = "^22.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.10.0"
pytest-clarity = "^1.0.1"
freezegun = "^1.2.2"
pre-commit = "^3.6.0"
flake8 = "^6.0.0"
black = "^23.12.1"
isort = "^5.12.0"
mypy = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
