[project]
name = "things-cloud"
version = "0.1.0"
description = "Client for Things Cloud API"
readme = "README.md"
authors = ["disrupted <hi@salomonpopp.me>"]
requires-python = ">=3.12"
dependencies = [
  "structlog>=24.4.0",
  "pydantic[email]>=2.10.3",
  "shortuuid>=1.0.13",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-mock>=3.14.0",
  "pytest-cov>=6.0.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.8.3",
  "pyright[nodejs]>=1.1.390",
  "pre-commit>=4.0.1",
  "freezegun>=1.5.1",
  "virtualenv>=20.28.0", # HACK: fix pre-commit: ModuleNotFoundError: No module named 'distutils'
]

[tool.ruff]
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
# For a list of all possible rules visit https://docs.astral.sh/ruff/rules/
select = [
  "F", # Pyflakes
  "E", # pycodestyle Errors
  "W", # pycodestyle Warnings
  "C90", # mccabe
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "RUF", # Ruff-specific rules
]
ignore = [
  # Rules in conflict with `ruff-format` -- START
  "W191", # Checks for indentation that uses tabs. Spaces are preferred.
  # "E111", # Checks for indentation with a non-multiple of 4 spaces, add when out of nursery
  # "E114", # Checks for indentation of comments with a non-multiple of 4 spaces, add when out of nursery
  # "E117", # Checks for over-indented code, add when out of nursery
  "E501", # Line too long
  # Rules in conflict with `ruff-format` -- END
  "RUF012", # type class attrs with `ClassVar` -- Too strict/trigger-happy
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=things_cloud --cov-report term-missing"
